# metal_gpu

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  Shaders.metal  build.sh  cube.m  hello_ios.m  main.m  main.metal  rect.m  rect.metal  shaders.air  shaders.metal  shaders.metallib  texture.m  triangle-metal  triangle-metal.m  triangle.m  video.m  video.metal
iOS/: CMakeLists.txt  Info.plist
macOS/: CMakeLists.txt  Info.plist
scripts/: build.sh  setup.sh
shaders/: shaders.air  shaders.metallib
